--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -4,4 +4,10 @@
     <style name="Theme.StudentTaskManager" parent="android:Theme.Material.Light.NoActionBar">
         <item name="android:statusBarColor">@color/purple_700</item>
     </style>
+
+    <style name="Theme.App.Starting" parent="Theme.SplashScreen">
+        <item name="windowSplashScreenBackground">@color/background</item>
+        <item name="android:animationDuration">500</item>
+        <item name="postSplashScreenTheme">@style/Theme.StudentTaskManager</item>
+    </style>
 </resources>
