Add empty list view

--- a/app/src/main/res/drawable-v24/ic_launcher_foreground.xml
+++ b/app/src/main/res/drawable-v24/ic_launcher_foreground.xml
@@ -1,30 +1,10 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:aapt="http://schemas.android.com/aapt"
-    android:width="108dp"
-    android:height="108dp"
-    android:viewportWidth="108"
-    android:viewportHeight="108">
-    <path android:pathData="M31,63.928c0,0 6.4,-11 12.1,-13.1c7.2,-2.6 26,-1.4 26,-1.4l38.1,38.1L107,108.928l-32,-1L31,63.928z">
-        <aapt:attr name="android:fillColor">
-            <gradient
-                android:endX="85.84757"
-                android:endY="92.4963"
-                android:startX="42.9492"
-                android:startY="49.59793"
-                android:type="linear">
-                <item
-                    android:color="#44000000"
-                    android:offset="0.0" />
-                <item
-                    android:color="#00000000"
-                    android:offset="1.0" />
-            </gradient>
-        </aapt:attr>
-    </path>
+    android:width="192dp"
+    android:height="192dp"
+    android:viewportWidth="192"
+    android:viewportHeight="192">
     <path
-        android:fillColor="#FFFFFF"
-        android:fillType="nonZero"
-        android:pathData="M65.3,45.828l3.8,-6.6c0.2,-0.4 0.1,-0.9 -0.3,-1.1c-0.4,-0.2 -0.9,-0.1 -1.1,0.3l-3.9,6.7c-6.3,-2.8 -13.4,-2.8 -19.7,0l-3.9,-6.7c-0.2,-0.4 -0.7,-0.5 -1.1,-0.3C38.8,38.328 38.7,38.828 38.9,39.228l3.8,6.6C36.2,49.428 31.7,56.028 31,63.928h46C76.3,56.028 71.8,49.428 65.3,45.828zM43.4,57.328c-0.8,0 -1.5,-0.5 -1.8,-1.2c-0.3,-0.7 -0.1,-1.5 0.4,-2.1c0.5,-0.5 1.4,-0.7 2.1,-0.4c0.7,0.3 1.2,1 1.2,1.8C45.3,56.528 44.5,57.328 43.4,57.328L43.4,57.328zM64.6,57.328c-0.8,0 -1.5,-0.5 -1.8,-1.2s-0.1,-1.5 0.4,-2.1c0.5,-0.5 1.4,-0.7 2.1,-0.4c0.7,0.3 1.2,1 1.2,1.8C66.5,56.528 65.6,57.328 64.6,57.328L64.6,57.328z"
-        android:strokeWidth="1"
-        android:strokeColor="#00000000" />
+        android:pathData="M126.4,47.1l-27.1,27 -15.4,-0c-22.2,-0.1 -24.2,0.1 -28.4,3.4 -6.9,5.2 -7.1,6 -7.4,30.2l-0.2,21.8 2.8,5.5c2.2,4.3 3.9,6.2 8.1,8.7 6.6,3.9 13.2,4.7 31.1,4.1 14.8,-0.5 19.8,-2.3 25.4,-8.9 5,-5.8 5.7,-9.5 5.7,-29.5l0,-17.8 25.5,-25.6 25.5,-25.5 0,-5.9c0,-6.2 -1.7,-10.3 -5.3,-12.5 -1.8,-1.2 -5,1.7 -42.1,38.8 -22.1,22.1 -40.4,40.1 -40.9,40.1 -0.4,-0 -4.1,-4.6 -8.2,-10.3l-7.6,-10.2 3.8,-0.3c3.1,-0.3 4,0.1 5.8,2.5 1.1,1.5 3.2,4.1 4.7,5.8l2.7,3 35.8,-35.8c19.7,-19.6 35.1,-35.7 34.3,-35.7 -0.8,-0 -13.7,12.2 -28.6,27.1zM89,84.5c-1.9,1.9 -3.7,3.5 -4.1,3.5 -0.4,-0 -1.9,-1.6 -3.3,-3.5l-2.7,-3.5 6.7,-0 6.8,-0 -3.4,3.5zM64.5,108.5c11.1,15.1 13.1,17.2 16.7,18 4.9,1.1 8.2,-1.2 20.7,-14.6l12.1,-12.9 0,15.4c0,14.2 -0.2,15.5 -2.3,18.7 -1.2,1.9 -4.2,4.4 -6.7,5.6 -4,2.1 -5.8,2.3 -20.6,2.3 -9.1,-0 -17.5,-0.5 -19.1,-1.1 -3.8,-1.4 -8.3,-5.7 -9.9,-9.6 -1.6,-3.7 -2.1,-36.4 -0.5,-34.8 0.5,0.6 4.8,6.4 9.6,13z"
+        android:fillColor="#000000"
+        android:strokeColor="#00000000"/>
 </vector>
