--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -10,4 +10,8 @@
         <item name="android:animationDuration">500</item>
         <item name="postSplashScreenTheme">@style/Theme.StudentTaskManager</item>
     </style>
+    <style name="DialogTheme" parent="android:Theme.Material.Dialog">
+        <item name="android:headerBackground">@color/black</item>
+        <item name="android:colorAccent">@color/white</item>
+    </style>
 </resources>
