--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -2,12 +2,6 @@
 <resources>
 
     <style name="Theme.StudentTaskManager" parent="android:Theme.Material.Light.NoActionBar">
-        <item name="android:statusBarColor">@color/black</item>
-    </style>
-
-    <style name="Theme.App.Starting" parent="Theme.SplashScreen">
-        <item name="windowSplashScreenBackground">@color/background</item>
-        <item name="android:animationDuration">500</item>
-        <item name="postSplashScreenTheme">@style/Theme.StudentTaskManager</item>
+        <item name="android:statusBarColor">@color/purple_700</item>
     </style>
 </resources>
