--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -6,9 +6,9 @@
     </style>
 
     <style name="Theme.App.Starting" parent="Theme.SplashScreen">
-        <item name="windowSplashScreenBackground">@color/background</item>
+        <item name="android:windowBackground">@drawable/splash_image</item>
         <item name="android:animationDuration">500</item>
-        <item name="postSplashScreenTheme">@style/Theme.StudentTaskManager</item>
+        <item name="windowSplashScreenBackground">#D6E0E7</item>
     </style>
     <style name="DialogTheme" parent="android:Theme.Material.Dialog">
         <item name="android:headerBackground">@color/black</item>
